{
    "name": "KeyBindings",
    "maps": [
        {
            "name": "Player",
            "id": "62ccdc0f-1d45-41c8-98c7-35bc08a94f22",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "7b4f16f6-78dc-4064-8a45-31018d2dd1c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "PassThrough",
                    "id": "fa5e2860-2984-47e8-9e35-483955fb2b91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LightAttack",
                    "type": "PassThrough",
                    "id": "8b1ae31f-5604-44d1-9c24-fae7c8204b76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "PassThrough",
                    "id": "a7e0deae-cdfa-44fd-8060-726543b23874",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HeavyAttack",
                    "type": "PassThrough",
                    "id": "525f3be0-34cf-4623-8301-fe29c85a5342",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NextDialogue",
                    "type": "PassThrough",
                    "id": "d7d6623b-ef67-4d41-9a4d-c2286affa369",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SkipIntro",
                    "type": "Button",
                    "id": "aa658f89-0e4e-4a09-99bb-aca848680f1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Horizontal",
                    "id": "85ed07c7-cffd-4b57-837b-731980b0e575",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "41029166-c1b7-48e3-ac84-62f8e6e1fea1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b7c93fd4-7f2f-4e91-9fe7-9a6f39763bfc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6d8041bd-2284-422b-bc5c-09f935b67772",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6516e7ad-fd8a-4a26-a0ee-5e234875ab67",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73ac4776-7cba-422e-9454-ac1eb0d41bc9",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac0e5fc6-45ab-4b2b-b017-18a84d437163",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "780f75d2-9d5e-4a96-9dbf-5379a90a229f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f60f0380-fd43-490c-a96c-9b9bd6f00d47",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipIntro",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}